Fix overflow

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,5 @@ body {
   width: 100vw;
   margin: 0;
   box-sizing: border-box;
-  overflow: hidden;
   padding: 0;
 }
